--- a/package.json
+++ b/package.json
@@ -1,4 +1,10 @@
 {
+  "author": {
+    "name": "para_mada",
+    "email": "para.mada4721@gmail.com",
+    "url": "https://www.para-mada.com"
+  },
+  "description": "This project is supposed to help you get help while playing",
   "name": "poke-mada",
   "version": "0.1.0",
   "private": true,
@@ -11,10 +17,8 @@
     "postinstall": "electron-builder install-app-deps",
     "postuninstall": "electron-builder install-app-deps"
   },
-  "main": "background.js",
   "dependencies": {
     "core-js": "^3.8.3",
-    "json-socket": "^0.3.0",
     "python-struct": "^1.1.3",
     "request": "^2.88.2",
     "sqlite3": "^5.1.7",
@@ -26,11 +30,12 @@
     "@vue/cli-plugin-babel": "~5.0.0",
     "@vue/cli-plugin-eslint": "~5.0.0",
     "@vue/cli-service": "~5.0.0",
-    "electron": "^13.0.0",
+    "electron": "^33.2.1",
+    "electron-builder": "^25.1.8",
     "electron-devtools-installer": "^3.1.0",
     "eslint": "^7.32.0",
     "eslint-plugin-vue": "^8.0.3",
-    "vue-cli-plugin-electron-builder": "~2.1.1"
+    "vue-cli-plugin-electron-builder": "^2.1.1"
   },
   "eslintConfig": {
     "root": true,
