--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   },
   "description": "This project is supposed to help you get help while playing",
   "name": "poke-mada",
-  "version": "0.1.4",
+  "version": "0.1.5",
   "private": true,
   "scripts": {
     "serve": "vue-cli-service serve",
@@ -18,6 +18,7 @@
   "main": "background.js",
   "dependencies": {
     "core-js": "^3.8.3",
+    "electron-localshortcut": "^3.2.1",
     "electron-updater": "^6.3.9",
     "python-struct": "^1.1.3",
     "request": "^2.88.2",
