--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   },
   "description": "This project is supposed to help you get help while playing",
   "name": "poke-mada",
-  "version": "0.1.5",
+  "version": "0.1.6",
   "private": true,
   "scripts": {
     "serve": "vue-cli-service serve",
@@ -18,11 +18,15 @@
   "main": "background.js",
   "dependencies": {
     "core-js": "^3.8.3",
+    "dotenv": "^16.4.7",
     "electron-localshortcut": "^3.2.1",
     "electron-updater": "^6.3.9",
     "python-struct": "^1.1.3",
     "request": "^2.88.2",
-    "vue": "^3.2.13"
+    "socket.io": "^4.8.1",
+    "vue": "^3.2.13",
+    "websocket": "^1.0.35",
+    "ws": "^8.18.0"
   },
   "devDependencies": {
     "@babel/core": "^7.12.16",
