--- a/package.json
+++ b/package.json
@@ -17,15 +17,23 @@
   },
   "main": "background.js",
   "dependencies": {
+    "@iarna/toml": "^2.2.5",
+    "@jarboer/electron-prompt": "^2.3.7",
+    "axios": "^1.7.9",
+    "config": "^3.3.12",
     "core-js": "^3.8.3",
     "dotenv": "^16.4.7",
     "electron-localshortcut": "^3.2.1",
+    "electron-prompt": "^1.7.0",
     "electron-updater": "^6.3.9",
+    "form-data": "^4.0.1",
     "python-struct": "^1.1.3",
     "request": "^2.88.2",
     "socket.io": "^4.8.1",
+    "toml": "^3.0.0",
     "vue": "^3.2.13",
     "websocket": "^1.0.35",
+    "winston": "^3.17.0",
     "ws": "^8.18.0"
   },
   "devDependencies": {
