--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "electron-prompt": "^1.7.0",
     "electron-updater": "^6.3.9",
     "form-data": "^4.0.1",
+    "mitt": "^3.0.1",
     "python-struct": "^1.1.3",
     "request": "^2.88.2",
     "socket.io": "^4.8.1",
