--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   },
   "description": "This project is supposed to help you get help while playing",
   "name": "poke-mada",
-  "version": "0.1.13",
+  "version": "0.1.14",
   "private": true,
   "scripts": {
     "serve": "vue-cli-service serve",
@@ -19,10 +19,10 @@
   "dependencies": {
     "@iarna/toml": "^2.2.5",
     "@jarboer/electron-prompt": "^2.3.7",
+    "@popperjs/core": "^2.11.8",
     "axios": "^1.7.9",
     "config": "^3.3.12",
     "core-js": "^3.8.3",
-    "dotenv": "^16.4.7",
     "electron-prompt": "^1.7.0",
     "electron-updater": "^6.3.9",
     "form-data": "^4.0.1",
@@ -31,7 +31,9 @@
     "request": "^2.88.2",
     "socket.io": "^4.8.1",
     "toml": "^3.0.0",
-    "vue": "^3.2.13",
+    "vite-plugin-vuetify": "^2.0.4",
+    "vue": "^3.5.13",
+    "vuetify": "^3.7.6",
     "websocket": "^1.0.35",
     "winston": "^3.17.0",
     "ws": "^8.18.0"
@@ -47,6 +49,7 @@
     "electron-devtools-installer": "^3.1.0",
     "eslint": "^7.32.0",
     "eslint-plugin-vue": "^8.0.3",
+    "unplugin-vue-components": "^28.0.0",
     "vue-cli-plugin-electron-builder": "^2.1.1",
     "webpack": "^5.97.1"
   },
