--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   },
   "description": "This project is supposed to help you get help while playing",
   "name": "poke-mada",
-  "version": "0.1.23",
+  "version": "0.2.0",
   "private": true,
   "scripts": {
     "serve": "vue-cli-service serve",
@@ -25,6 +25,7 @@
     "compare-versions": "^6.1.1",
     "config": "^3.3.12",
     "core-js": "^3.8.3",
+    "electron-dl": "^4.0.0",
     "electron-prompt": "^1.7.0",
     "electron-updater": "^6.3.9",
     "form-data": "^4.0.1",
