--- a/package.json
+++ b/package.json
@@ -4,8 +4,8 @@
     "email": "para.mada4721@gmail.com",
     "url": "https://www.para-mada.com"
   },
-  "description": "This project is supposed to help you get help while playing",
-  "name": "poke-mada",
+  "description": "Pokemon Assistant to ease your pokemon newbie experience",
+  "name": "dedsafio-pokemon",
   "version": "0.4.1",
   "private": true,
   "scripts": {
@@ -32,11 +32,13 @@
     "electron-updater": "^6.3.9",
     "form-data": "^4.0.1",
     "mitt": "^3.0.1",
+    "path-browserify": "^1.0.1",
     "pinia": "^2.3.1",
     "python-struct": "^1.1.3",
     "request": "^2.88.2",
     "socket.io": "^4.8.1",
     "toml": "^3.0.0",
+    "uuid": "^11.1.0",
     "vite-plugin-vuetify": "^2.0.4",
     "vue": "^3.5.13",
     "vue-router": "^4.5.0",
