--- a/package.json
+++ b/package.json
@@ -4,9 +4,9 @@
     "email": "para.mada4721@gmail.com",
     "url": "https://www.para-mada.com"
   },
-  "description": "This project is supposed to help you get help while playing",
-  "name": "poke-mada",
-  "version": "0.2.7",
+  "description": "Pokemon Assistant to ease your pokemon newbie experience",
+  "name": "dedsafio-pokemon",
+  "version": "0.4.1",
   "private": true,
   "scripts": {
     "serve": "vue-cli-service serve",
@@ -32,13 +32,16 @@
     "electron-updater": "^6.3.9",
     "form-data": "^4.0.1",
     "mitt": "^3.0.1",
+    "path-browserify": "^1.0.1",
+    "pinia": "^2.3.1",
     "python-struct": "^1.1.3",
     "request": "^2.88.2",
     "socket.io": "^4.8.1",
     "toml": "^3.0.0",
+    "uuid": "^11.1.0",
     "vite-plugin-vuetify": "^2.0.4",
     "vue": "^3.5.13",
-    "vuetify": "^3.7.6",
+    "vue-router": "^4.5.0",
     "websocket": "^1.0.35",
     "winston": "^3.17.0",
     "ws": "^8.18.0"
@@ -56,6 +59,7 @@
     "eslint-plugin-vue": "^8.0.3",
     "unplugin-vue-components": "^28.0.0",
     "vue-cli-plugin-electron-builder": "^2.1.1",
+    "vuetify": "^3.7.6",
     "webpack": "^5.97.1"
   },
   "eslintConfig": {
